fixed alignment of social button row

--- a/css/style.css
+++ b/css/style.css
@@ -607,5 +607,5 @@ th, td, caption {
     display: block;
     float: left;
     margin: 0;
-    padding: 10px;
+    padding: 8px;
 }
